--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ main .section-form, .section-infos {
     justify-content: center;
     padding-top: 130px;
 }
-main .section-form form {
+main .section-form .form {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -76,7 +76,7 @@ main .section-form form {
     background-color: #333;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.35);
 }
-main .section-form form input {
+main .section-form .form input {
     outline: none;
     border: none;
     border-bottom: 2px solid #ccc;
@@ -85,7 +85,7 @@ main .section-form form input {
     font-size: 1.2rem;
     color: #ccc;
 }
-main .section-form form button {
+main .section-form .form button {
     width: 293px;
     height: 42px;
     border-radius: 20px;
@@ -214,13 +214,13 @@ main .section-infos .smartphone .screen .loadingg {
     main .section-form, .section-infos {
         width: 100%;
     }
-    main .section-form form {
+    main .section-form .form {
         width: 80%;
     }
-    main .section-form form input {
+    main .section-form .form input {
         width: 80%;
     }
-    main .section-form form button {
+    main .section-form .form button {
         width: 80%;
     }
     main .section-infos .smartphone {
