--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 body {
+    transition: all .6s ease-in-out;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -40,6 +41,7 @@ header .toogle-dark {
     margin-right: 30px;
 }
 header .toogle-dark .dark-btn {
+    transition: all .6s ease-in-out;
     width: 30px;
     height: 26px;
     outline: none;
@@ -48,12 +50,17 @@ header .toogle-dark .dark-btn {
     background-color: #fff;
     border: 1px solid #444;
     cursor: pointer;
-    /*filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));*/
     font-size: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(127, 127, 5);
+    color: #111;
+}
+header .toogle-dark .dark-btn .sun {
+    display: block;
+}
+header .toogle-dark .dark-btn .moon {
+    display: none;
 }
 main {
     width: 100vw;
@@ -164,6 +171,9 @@ main .section-infos .smartphone .screen .infos .name-user {
     background: #EEE;
     text-align: center;
 }
+main .section-infos .smartphone .screen .infos .name-user.content-true {
+    background-color: #fff;
+}
 main .section-infos .smartphone .screen .infos .repos {
     width: 100%;
     margin-top: 5px;
@@ -241,8 +251,11 @@ main .section-infos .smartphone .screen .loadingg {
     main .section-infos .smartphone .screen {
         width: 298px;
     }
-    main .section-infos .smartphone .screen .infos .repos {
+    main .section-infos .smartphone .screen .infos .repos a {
         width: 90%;
+    }
+    main .section-infos .smartphone .screen .infos .repos {
+        width: 100%;
     }
     main .section-infos .smartphone .screen .infos .repos .repo {
         width: 90%;
